--- a/translations/pt-BR/content/cultures/culture.json
+++ b/translations/pt-BR/content/cultures/culture.json
@@ -8,50 +8,50 @@
             "boldallowed": true,
             "released": true,
             "uilabels": {
-                "UI_PAUSE": "$Despausar\n<size=60%><alpha=#99><smallcaps>[{SETTING:kbpause}]</smallcaps>",
-                "UI_UNPAUSE": "$Retomar\n<size=60%><alpha=#99><smallcaps>[{SETTING:kbpause}]</smallcaps>",
+                "UI_PAUSE": "$Pausar\n<size=60%><alpha=#99><smallcaps>[{SETTING:kbpause}]</smallcaps>",
+                "UI_UNPAUSE": "$Despausar\n<size=60%><alpha=#99><smallcaps>[{SETTING:kbpause}]</smallcaps>",
                 "UI_NORMALSPEED": "$Normal\n<size=60%><alpha=#99><smallcaps>[{SETTING:kbnormalspeed}]</smallcaps>",
                 "UI_FASTSPEED": "$Rápido\n<size=60%><alpha=#99><smallcaps>[{SETTING:kbfastspeed}]</smallcaps>",
-                "VERB_START": "$Começar <smallcaps>[{SETTING:kbstartrecipe}]</smallcaps>",
+                "VERB_START": "$Iniciar <smallcaps>[{SETTING:kbstartrecipe}]</smallcaps> ",
                 "VERB_COLLECT": "$Coletar <smallcaps>[{SETTING:kbcollectall}]</smallcaps>",
                 "VERB_RUNNING": "Em execução...",
                 "VERB_ACCEPT": "$Aceitar <smallcaps>[{SETTING:kbcollectall}]</smallcaps>",
-                "UI_CLICK_TO_NAME": "[Click para dar um nome] ",
+                "UI_CLICK_TO_NAME": "[Clique para nomear] ",
                 "UI_RELOAD": "Recarregar",
                 "UI_CONTINUE": "Continuar",
-                "UI_RESUME": "Continuar",
-                "UI_RESTART": "RECOMEÇAR",
+                "UI_RESUME": "Retomar",
+                "UI_RESTART": "REINICIAR",
                 "UI_RESTARTSURE": "TEM CERTEZA?",
                 "UI_BROWSE": "Ver Arquivos",
                 "UI_SAVEEXIT": "Salvar e Sair",
                 "UI_OPTIONS": "Opções\n<size=60%><alpha=#99>[ESC]",
                 "UI_CORRUPTSAVE": "Sessão Atual Corrompida",
-                "UI_CORRUPTDESC": "Salvando interrompido para proteger seus dados salvos.\n Um par de arquivos salvos do relatório de erros (antes e depois) foi criado. Se você continuar sem salvar, ele TALVEZ se recupere, mas recomendamos recarregar.",
+                "UI_CORRUPTDESC": "Salvamento interrompido para proteger seus dados salvos.\n Dois relatórios de erros dos arquivos salvos (antes e depois) foram criados. Se você continuar sem salvar, ele TALVEZ se recupere, mas recomendamos recarregar.",
                 "UI_CORRUPTCONTINUE": "Continuar jogando",
                 "UI_CORRUPTRELOAD": "Recarregar último jogo salvo",
                 "UI_CORRUPTABANDON": "Abandonar sessão e sair",
                 "UI_OPTIONSTITLE": "Opções",
-                "UI_OPTIONSNOTES": "As preferências variam: o Graal Vermelho, entre outros, nos ensinou isso.\n\n[Você pode arrastar uma pilha por seu emblema numérico para mover toda a pilha. Você pode aplicar zoom com a roda do mouse ou com Q e E. 1, 2 e 3 alternar os níveis de zoom. As teclas de seta movem sua visão.]",
+                "UI_OPTIONSNOTES": "As preferências variam: o Graal Vermelho, entre outros, nos ensinou isso.\n\n[Você pode arrastar uma pilha pela sua insígnia numérica para mover toda a pilha. Você pode aplicar zoom com a roda do mouse ou com Q e E. Use 1, 2 e 3 para alternar os níveis de zoom. As setas movem sua visão.]",
                 "UI_OPTIONSNOTES_FE": "As preferências variam: o Graal Vermelho, entre outros, nos ensinou isso.",
-                "UI_OPT_MUSICVOL": "Volume da Musica",
+                "UI_OPT_MUSICVOL": "Volume da Música",
                 "UI_OPT_SOUNDVOL": "Volume dos Sons",
                 "UI_OPT_INFODURATION": "Duração da Janela de Informações",
-                "UI_OPT_UISCALING": "Escalamento de Interface",
+                "UI_OPT_UISCALING": "Escala da Interface",
                 "UI_OPT_AUTOSAVEINTERVAL": "Intervalo de Salvamento Automático",
-                "UI_OPT_GRIDSNAPSIZE": "Tamanho do Grid Snap",
+                "UI_OPT_GRIDSNAPSIZE": "Tamanho de Ajuste à Grade",
                 "UI_OPT_CONTRAST": "Modo Alto Contraste",
-                "UI_OPT_ACCESSIBLE_CARDS": "Texto de Cartão Acessível",
+                "UI_OPT_ACCESSIBLE_CARDS": "Cartas com Texto Acessível",
                 "UI_OPT_BIRDWORM": "Pássaro / Minhoca",
                 "UI_BIRD": "Ordem",
                 "UI_WORM": "Anarquia",
-                "UI_CARD": "Cartão",
+                "UI_CARD": "Carta",
                 "UI_ON": "Ligado",
                 "UI_OFF": "Desligado",
                 "UI_SNAP_0": "Desligado",
-                "UI_SNAP_1": "1 Cartão",
-                "UI_SNAP_2": "½ Cartão",
-                "UI_SNAP_3": "¼ Cartão",
-                "UI_KB_STARTRECIPE": "Começar Receita",
+                "UI_SNAP_1": "1 Carta",
+                "UI_SNAP_2": "½ Carta",
+                "UI_SNAP_3": "¼ Carta",
+                "UI_KB_STARTRECIPE": "Iniciar Receita",
                 "UI_KB_COLLECTALL": "Coletar Resultados",
                 "UI_KB_PAUSE": "Pausar",
                 "UI_KB_NORMALSPEED": "Velocidade: Normal",
