--- a/translations/pt-BR/loc/elements/city_locations.json
+++ b/translations/pt-BR/loc/elements/city_locations.json
@@ -352,7 +352,7 @@
                 },
                 {
                     "id": "funds",
-                    "label": "Fundos",
+                    "label": "Saldos",
                     "description": "Coloque fundos aqui para aumentar a influência de Forja.",
                     "actionid": "explore",
                     "required": {
