--- a/translations/pt-BR/loc/elements/followers.json
+++ b/translations/pt-BR/loc/elements/followers.json
@@ -85,7 +85,7 @@
                 "acquaintance": 1,
                 "follower_lustenlightenment": 1
             },
-            "description": "\"Gato Caro\", como ela própria designa, ganha a vida como palco e vidro. Ela pode ter talentos mais profundos. [Talvez você possa recrutar este conhecido como seguidor.]",
+            "description": "\"Cat Caro\", como ela própria designa, ganha a vida como médium de palco e vidente. Ela pode ter talentos mais profundos. [Talvez você possa recrutar este conhecido como seguidor.]",
             "xtriggers": {
                 "recruiting": "cat_b",
                 "killmortal": "corpse",
