--- a/translations/pt-BR/loc/recipes/dream_mansus.json
+++ b/translations/pt-BR/loc/recipes/dream_mansus.json
@@ -1304,7 +1304,7 @@
             "requirements": {
                 "sendingmothg": 1
             },
-            "startdescription": "O luar cisa as árvores para enegrecer aquilo que o poço contém, para retratar as raízes-das-árvores, para tocar os gêmeos membros da Medusa, que espera pelo peço. Ela levanta seus pingantes braços, que seguram uma pálida Chave, girando como uma minhoca com presas. Eu me ajoelho, um rubro veado, e ofereço meu pescoço. Uma gota de sangue derrama-se no poço; e então Medusa começa a entalhar minha nova forma.",
+            "startdescription": "O luar divide as árvores para enegrecer aquilo que o poço contém, para retratar as raízes-das-árvores, para tocar os gêmeos membros da Medusa, que espera pelo peço. Ela levanta seus pingantes braços, que seguram uma pálida Chave, girando como uma minhoca com presas. Eu me ajoelho, um rubro veado, e ofereço meu pescoço. Uma gota de sangue derrama-se no poço; e então Medusa começa a entalhar minha nova forma.",
             "ending": "minormothvictory",
             "warmup": 30
         },
@@ -1316,7 +1316,7 @@
                 "sendingmothg": 1,
                 "summoned": 1
             },
-            "startdescription": "O luar cisa as árvores para enegrecer aquilo que o poço contém, para retratar as raízes-das-árvores, para tocar os gêmeos membros da Medusa, que espera pelo peço. Ela levanta seus pingantes braços, que seguram uma pálida Chave, girando como uma minhoca com presas. Eu me ajoelho, um rubro veado, e ofereço meu pescoço. Uma gota de sangue derrama-se no poço; e então Medusa começa a entalhar minha nova forma.\n\nNo obscuro lugar debaixo das árvores, minha defunta amada assiste, com sua pele que é manchada, seus olhos que são lámpadas.",
+            "startdescription": "O luar divide as árvores para enegrecer aquilo que o poço contém, para retratar as raízes-das-árvores, para tocar os gêmeos membros da Medusa, que espera pelo peço. Ela levanta seus pingantes braços, que seguram uma pálida Chave, girando como uma minhoca com presas. Eu me ajoelho, um rubro veado, e ofereço meu pescoço. Uma gota de sangue derrama-se no poço; e então Medusa começa a entalhar minha nova forma.\n\nNo obscuro lugar debaixo das árvores, minha defunta amada assiste, com sua pele que é manchada, seus olhos que são lâmpadas.",
             "ending": "minormothvictorywithrisen",
             "warmup": 10
         },
