--- a/translations/pt-BR/loc/endings/endings.json
+++ b/translations/pt-BR/loc/endings/endings.json
@@ -292,7 +292,7 @@
         {
             "id": "victorvictory",
             "label": "MELHOR AFTER: VICTOR",
-            "description": "Nossas noites juntas são coisas elegante. A varinha da escada brilhavam de ouro. As visões do público perto do palco. A centelha de nossas facas, mais para trás, através do filme. Muitas vezes encontramos com sua irmã, cujos sabores espelham nossos próprios. Mas quando estamos sozinhos de novo, ele escraviza seu olhar para mim. Ele oferece beijos, calças, caramelas. Estamos felizes, eu acho.\n[Isto pode ser considerado uma vitória. Mas a casa não é lugar para amadores.]",
+            "description": "Nossas noites juntas são coisas elegantes. A extensão da escada brilhava com ouro. Os suspiros do público perto do palco. O tilintar de nossas facas, mais para trás, através do filé. Muitas vezes encontramos com sua irmã, cujos sabores espelham nossos próprios. Mas quando estamos sozinhos novamente, ele esbanja seu olhar sobre mim. Ele oferece beijos, calças, carícias. Estamos felizes, eu acho.\n[Isto pode ser considerado uma vitória. Mas a Casa não é lugar para amantes.]",
             "image": "victor",
             "flavour": "Melancholy",
             "anim": "DramaticLight",
