--- a/translations/pt-BR/loc/elements/ascension_elements.json
+++ b/translations/pt-BR/loc/elements/ascension_elements.json
@@ -17,7 +17,7 @@
                 "desire": 1,
                 "sensationmarks": 1
             },
-            "description": "Eu poderia atingir experiências de tal intensidade que poucos podem imaginar [Esta carta permitirá ganhar uma vitória Sensorial, se você a melhorar o suficiente. Sonhar com ela poderá avança-la ou a mudar]",
+            "description": "Eu poderia atingir experiências de tal intensidade que poucos podem imaginar [Esta carta permitirá ganhar uma vitória Sensorial, se você a melhorar o suficiente. Sonhar com ela poderá avança-la ou muda-la]",
             "uniquenessgroup": "uqdesire"
         },
         {
@@ -27,7 +27,7 @@
                 "desire": 1,
                 "enlightenmentmarks": 1
             },
-            "description": "Ocorreu-me que tenho a chave da sabedoria. [Esta carta permitirá que você ganhe uma vitória de Iluminação, se você a melhorar o suficiente. Sonhar sobre ela poderá avança-la ou a mudar.]",
+            "description": "Ocorreu-me que tenho a chave da sabedoria. [Esta carta permitirá que você ganhe uma vitória de Iluminação, se você a melhorar o suficiente. Sonhar sobre ela poderá avança-la ou muda-la.]",
             "uniquenessgroup": "uqdesire"
         },
         {
